# luogu_paintboard

./: .gitignore  Cargo.toml  README.md  config_example.toml
images/: colors
src/: lib.rs  main.rs
