[package]
name = "luogu_paintboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23", features = ["full"] }
reqwest = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4"
futures-util = "0.3"
rayon = "1.6"
indicatif = "0.17"
env_logger = "0.10"
log = "0.4"
regex = "1.7.0"
image = "0.24"
toml = "0.5"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
